fixed save button visible on Sale Add page by content height

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -274,18 +274,6 @@ display: flex;
 align-items: center;
 }
 
-.ss480{
-  height: 236px;
-}
-
-/*.ss568{
-  height: 324px;
-}*/
-
-.ss568{
-  height: 324px;
-}
-
 .center{
   display: -webkit-box;
     display: -moz-box;
